# ganyu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ganyu.py  start.sh
docker/: docker-compose.yml
docker/backend/: Dockerfile  properties.ganyu.txt  run.sh
docker/database/: Dockerfile
sql/create/: create_index.sql  create_tables.sql  create_trigger.sql  create_view.sql
sql/drop/: drop_index.sql  drop_tables.sql  drop_trigger.sql  drop_view.sql
sql/insert/: insert_directories.sql  insert_files.sql  insert_sources.sql  insert_stored.sql
sql/select/: select_directories.sql  select_files.sql  select_sources.sql  select_stored.sql  select_test.sql  select_views.sql
sql/test/: test_delete.sql  test_insert.sql  test_select.sql  test_update.sql
src/: CMakeLists.txt  directory.html  file.html  ganyu.c  ganyu_app.c  ganyu_app.h  ganyu_directories_page.c  ganyu_file_page.c  ganyu_files_page.c  ganyu_pages.c  ganyu_pages.h  ganyu_properties.c  ganyu_properties.h  ganyu_sources_page.c  ganyu_utils.c  ganyu_utils.h  index.html
src/routes/: ganyu_catalog_page.c  ganyu_deldir_page.c  ganyu_delfile_page.c  ganyu_delsrc_page.c  ganyu_directories_page.c  ganyu_directory_page.c  ganyu_file_page.c  ganyu_files_page.c  ganyu_index_page.c  ganyu_moddir_page.c  ganyu_modfile_page.c  ganyu_modsrc_page.c  ganyu_not_found_page.c  ganyu_putdir_page.c  ganyu_putfile_page.c  ganyu_rmdirstore_page.c  ganyu_rmfilestore_page.c  ganyu_source_page.c  ganyu_sources_page.c  ganyu_updir_page.c  ganyu_upfile_page.c  ganyu_upload_page.c  ganyu_upsrc_page.c
(+2 files in other folders)
